# SEBO

./: .gitignore  README.md  pyproject.toml  requirements-benchmark.txt  requirements.txt  run_all.py  run_pipeline.py
append_results/: append_week10_results.py  append_week11_results.py  append_week12_results.py  append_week13_results.py  append_week8_results.py  append_week9_results.py  run_optimizers_on_data.py
configs/: bayesian_optimizer.yaml  de_gp_ei_optimizer.yaml  ga_optimizer.yaml  optuna_optimizer.yaml  turbo_optimizer.yaml
docs/: BBO_capstone_presentation_23.2_Nikolas_Karefyllidis.md  BBO_capstone_presentation_23.2_Nikolas_Karefyllidis.txt  Capstone_Project_FAQs.md  README.md  TECHNICAL_FOUNDATIONS.md  datasheet.md  model_card.md  project_roadmap.md
docs_private/: README_PRIVATE.md  unused_or_removable_inventory.md
docs_private/20_notebooks_for_devel/: function_1D.ipynb  function_1D_evolutionary_tutorial.ipynb  function_2D.ipynb
notebooks/: demo_sklearn_hpo.ipynb  function_1_Radiation-Detection.ipynb  function_2_Mystery-ML-Model.ipynb  function_3_Drug-Discovery.ipynb  function_4_Warehouse-Logistics.ipynb  function_5_Chemical-Process-Yield.ipynb  sebo_benchmark.ipynb
scripts/: append_week7_results.py  export_function3_gp_evolution_gif.py  run_optimizers_on_data.py
sebo/: __init__.py
src/optimizers/: optimizer.py
src/optimizers/bayesian/: my_gp_skopt.py
src/optimizers/my_bayesian/: __init__.py  my_gp_skopt.py
src/optimizers/wrappers/: __init__.py  ga_solver.py  (+6 more)
src/utils/: __init__.py  compare_solvers.py  plot_utilities.py  unique_query.py
